wisecow/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow-app
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow-container
          image: admin9010:wisecow:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
